--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-BING_API_KEY=
-OPENAI_API_KEY=
-
-OPENWEATHERMAP_API_KEY=
-ALPHA_VANTAGE_API_KEY=
-FINNHUB_API_KEY=
+BING_API_KEY=dummy-bing-key
+OPENAI_API_KEY=sk-dummy-openai-key-for-build-only
+OPENWEATHERMAP_API_KEY=dummy-weather-key
+ALPHA_VANTAGE_API_KEY=dummy-alpha-vantage-key
+FINNHUB_API_KEY=dummy-finnhub-key
